--- a/src/dscvr_takehome_rust/Cargo.toml
+++ b/src/dscvr_takehome_rust/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
+chrono = "0.4.19"
 candid = "0.7.14"
 ic-cdk = "0.5.1"
 ic-cdk-macros = "0.5"
